@@ -266,8 +266,7 @@ static const gdb_byte arm_linux_thumb2_le_breakpoint[] = { 0xf0, 0xf7, 0x00, 0xa
 #define ARM_RT_SIGRETURN 173
 
 static CORE_ADDR
-  arm_linux_get_next_pcs_syscall_next_pc (struct arm_get_next_pcs *self,
-					  CORE_ADDR pc);
+  arm_linux_get_next_pcs_syscall_next_pc (struct arm_get_next_pcs *self);
 
 /* Operation function pointers for get_next_pcs.  */
 static struct arm_get_next_pcs_ops arm_linux_get_next_pcs_ops = {
@@ -872,10 +871,10 @@ arm_linux_get_syscall_number (struct gdbarch *gdbarch,
 }
 
 static CORE_ADDR
-arm_linux_get_next_pcs_syscall_next_pc (struct arm_get_next_pcs *self,
-					CORE_ADDR pc)
+arm_linux_get_next_pcs_syscall_next_pc (struct arm_get_next_pcs *self)
 {
   CORE_ADDR next_pc = 0;
+  CORE_ADDR pc = regcache_read_pc (self->regcache);
   int is_thumb = arm_is_thumb (self->regcache);
   ULONGEST svc_number = 0;
   struct gdbarch *gdbarch = get_regcache_arch (self->regcache);
